syntax = "proto3";

package scuffle.platform.internal.image_processor;

import "scuffle/platform/internal/types/image_format.proto";

message Task {
  enum ResizeMethod {
    Fit = 0;
    Stretch = 1;
    PadBottomLeft = 2;
    PadBottomRight = 3;
    PadTopLeft = 4;
    PadTopRight = 5;
    PadCenter = 6;
    PadCenterRight = 7;
    PadCenterLeft = 8;
    PadTopCenter = 9;
    PadBottomCenter = 10;
    PadTop = 11;
    PadBottom = 12;
    PadLeft = 13;
    PadRight = 14;
  }

  enum ResizeAlgorithm {
    Nearest = 0;
    Box = 1;
    Bilinear = 2;
    Hamming = 3;
    CatmullRom = 4;
    Mitchell = 5;
    Lanczos3 = 6;
  }

  string input_path = 1;

  message Ratio {
    uint32 numerator = 1;
    uint32 denominator = 2;
  }

  Ratio aspect_ratio = 2;
  bool clamp_aspect_ratio = 3;

  enum Upscale {
    Yes = 0;
    No = 1;
    NoPreserveSource = 2;
  }

  Upscale upscale = 4;

  repeated scuffle.platform.internal.types.ImageFormat formats = 5;
  ResizeMethod resize_method = 6;
  ResizeAlgorithm resize_algorithm = 7;
  
  bool input_image_scaling = 8;
  repeated uint32 scales = 9;

  string output_prefix = 10;

  message Limits {
    uint32 max_processing_time_ms = 1;
    uint32 max_input_frame_count = 2;
    uint32 max_input_width = 3;
    uint32 max_input_height = 4;
    uint32 max_input_duration_ms = 5;
  }

  optional Limits limits = 11;

  string callback_subject = 12;
}
